# DinoSFML

./: .gitignore  .goutputstream-1F97E2  AnimatedModel.cpp  AnimatedModel.hpp  Background.cpp  Background.h  Background.hpp  CMakeCache.txt  CMakeLists.txt  Enemies.cpp  Enemies.h  Enemies.hpp  Enemy.cpp  Enemy.h  Game.cpp  Game.h  Game.hpp  InfoText.cpp  InfoText.hpp  Model.cpp  Model.h  Model.hpp  Player.cpp  Player.h  Player.hpp  README.md  Randomizer.cpp  Randomizer.h  Randomizer.hpp  Scoreboard.cpp  Scoreboard.hpp  main.cpp  testing.hpp
